--- a/workflows/Enrich_Domain_with_OSINT_from_Slack/workflow.spec.yaml
+++ b/workflows/Enrich_Domain_with_OSINT_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [data_enrichment, threat_detection_and_response]
-  keywords: [slack, chat, chatops, work_from_home]
+  keywords: [slack, chat, chatops, work_from_home, cloud_enabled]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_Domain_with_OSINT_from_Slack
