--- a/workflows/Enrich_Indicators_with_OSINT_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Enrich_Indicators_with_OSINT_from_Microsoft_Teams/workflow.spec.yaml
@@ -3,13 +3,13 @@ products: ["insightconnect"]
 name: Enrich_Indicators_with_OSINT_from_Microsoft_Teams
 title: "Enrich Indicators with OSINT from Microsoft Teams"
 description: "Look up and enrich URLs, IP addresses, and hashes directly from Microsoft Teams using open source threat intelligence tools such as Dig, DNS, and Whois."
-version: 2.0.1
+version: 2.0.2
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [alerting_and_notifications, threat_detection_and_response]
-  keywords: [enrichment, teams, work_from_home, phishing]
+  keywords: [enrichment, teams, work_from_home, phishing, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_Indicators_with_OSINT_from_Microsoft_Teams
