--- a/workflows/Lookup_InsightVM_Host_Info_From_Teams/workflow.spec.yaml
+++ b/workflows/Lookup_InsightVM_Host_Info_From_Teams/workflow.spec.yaml
@@ -3,13 +3,13 @@ products: ["insightconnect", "insightvm"]
 name: Lookup_InsightVM_Host_Info_From_Teams
 title: "Lookup InsightVM Host Info from Microsoft Teams"
 description: Lookup a host, including IP, MAC, last assessment date, vulnerability statistics, and running services, from a Microsoft Teams message.
-version: 1.1.0
+version: 2.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [vulnerability_management, asset_inventory]
-  keywords: [InsightVM, chatops, chat, work_from_home]
+  keywords: [InsightVM, chatops, chat, work_from_home, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Lookup_InsightVM_Host_Info_From_Teams
