--- a/workflows/List_All_Inactive_Assets_with_InsightVM_from_Slack/workflow.spec.yaml
+++ b/workflows/List_All_Inactive_Assets_with_InsightVM_from_Slack/workflow.spec.yaml
@@ -3,13 +3,13 @@ products: ["insightconnect", "insightvm"]
 name: List_All_Inactive_Assets_with_InsightVM_from_Slack
 title: "List All Inactive Assets with InsightVM from Slack"
 description: This workflow accepts a Slack command, and will return any inactive assets it finds in InsightVM.
-version: 1.0.0
+version: 2.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [vulnerability_management]
-  keywords: [vulnerability_management, chat, chatops]
+  keywords: [vulnerability_management, chat, chatops, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/List_All_Inactive_Assets_with_InsightVM_from_Slack
