--- a/workflows/Block_Host_with_Palo_Alto_Firewall_from_Slack/workflow.spec.yaml
+++ b/workflows/Block_Host_with_Palo_Alto_Firewall_from_Slack/workflow.spec.yaml
@@ -3,13 +3,13 @@ products: ["insightconnect"]
 name: Block_Host_with_Palo_Alto_Firewall_from_Slack
 title: "Block Host with Palo Alto Firewall from Slack"
 description: "Block and unblock a host with a Palo Alto firewall from Slack."
-version: 1.2.0
+version: 2.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords:  [ransomware, containment, firewall, block, work_from_home, palo, alto, slack]
+  keywords:  [ransomware, containment, firewall, block, work_from_home, palo, alto, slack, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Block_Host_with_Palo_Alto_Firewall_from_Slack
