--- a/workflows/Open_Tickets_In_ServiceNow_For_Newly_Discovered_Vulns/workflow.spec.yaml
+++ b/workflows/Open_Tickets_In_ServiceNow_For_Newly_Discovered_Vulns/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [vulnerability_management, remediation_management, ]
+  use_cases: [vulnerability_management, remediation_management]
   keywords: [servicenow, insightvm, itsm, ticketing]
   features: []
 resources:
