--- a/workflows/Close_Tickets_in_ServiceNow_for_Newly_Remediated_Vulns/workflow.spec.yaml
+++ b/workflows/Close_Tickets_in_ServiceNow_for_Newly_Remediated_Vulns/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [vulnerability_management, remediation_management, ]
+  use_cases: [vulnerability_management, remediation_management]
   keywords: [servicenow, insightvm, itsm, ticketing]
   features: []
 resources:
