--- a/workflows/Open_Tickets_In_ServiceNow_For_Newly_Discovered_Vulns/workflow.spec.yaml
+++ b/workflows/Open_Tickets_In_ServiceNow_For_Newly_Discovered_Vulns/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [vulnerability_management, remediation_management]
-  keywords: [servicenow, insightvm, itsm, ticketing]
+  keywords: [servicenow, insightvm, itsm, ticketing, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Open_Tickets_in_ServiceNow_for_Newly_Discovered_Vulns
