--- a/workflows/Open_Tickets_In_ServiceNow_For_Newly_Discovered_Vulns/workflow.spec.yaml
+++ b/workflows/Open_Tickets_In_ServiceNow_For_Newly_Discovered_Vulns/workflow.spec.yaml
@@ -6,7 +6,7 @@ description: "This workflow opens tickets in ServiceNow for vulnerabilities disc
 version: 1.0.0
 vendor: rapid7
 support: rapid7
-status: []
+status: [obsolete]
 hub_tags:
   use_cases: [vulnerability_management, remediation_management]
   keywords: [servicenow, insightvm, itsm, ticketing, parameters]
