--- a/workflows/Enrich_Hash_With_Threat_Intelligence_From_Threat_Crowd/workflow.spec.yaml
+++ b/workflows/Enrich_Hash_With_Threat_Intelligence_From_Threat_Crowd/workflow.spec.yaml
@@ -3,13 +3,13 @@ products: ["insightconnect"]
 name: Enrich_Hash_With_Threat_Intelligence_From_Threat_Crowd
 title: "Enrich Hash with Threat Intelligence from Threat Crowd"
 description: Learn to enrich a hash with threat intelligence from Threat Crowd using an API trigger.
-version: 1.0.1
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [cloud-enabled, enrichment, hash, threat_intelligence, ioc, threatcrowd, api]
+  keywords: [cloud_enabled, enrichment, hash, threat_intelligence, ioc, threatcrowd, api]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_Hash_With_Threat_Intelligence_From_Threat_Crowd
