--- a/workflows/Top_Remediations_For_Asset_In_Teams/workflow.spec.yaml
+++ b/workflows/Top_Remediations_For_Asset_In_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [remediation_management]
-  keywords: [work_from_home, patch_management, teams, chat, insightvm]
+  keywords: [work_from_home, patch_management, teams, chat, insightvm, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Top_Remediations_For_Asset_In_Teams
