--- a/workflows/Top_Remediations_From_Slack/workflow.spec.yaml
+++ b/workflows/Top_Remediations_From_Slack/workflow.spec.yaml
@@ -3,7 +3,7 @@ products: ["insightconnect", "insightvm"]
 name: Top_Remediations_From_Slack
 title: "Lookup Top Remediations with InsightVM from Slack"
 description: Lookup and receive the top 10 remediation steps from InsightVM for a given host, asset group, site, or tag from a Slack message.
-version: 1.1.2
+version: 1.1.3
 vendor: rapid7
 support: rapid7
 status: []
@@ -16,7 +16,9 @@ resources:
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: workflow1.png
-    title: Workflow View
+    title: Workflow View 1
+  - name: workflow2.png
+    title: Workflow View 2
   - name: execution1.png
     title: Workflow Execution in Slack
   - name: job1.png
