--- a/workflows/MDR_Active_Response_Unquarantine_Asset_with_Insight_Agent/workflow.spec.yaml
+++ b/workflows/MDR_Active_Response_Unquarantine_Asset_with_Insight_Agent/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: ["hidden"]
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [mdr, containment, quarantine, active_response]
+  keywords: [mdr, containment, quarantine, active_response, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/MDR_Active_Response_Unquarantine_Asset_with_Insight_Agent
