--- a/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
+++ b/workflows/Delete_O365_Emails_With_Slack/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Delete_O365_Emails_With_Slack
-title: "Find and Delete Emails in Office 365 from Slack"
+title: Find and Delete Emails in Office 365 from Slack
 description: "Use a Slack command to find and optionally delete emails matching the given search criteria."
-version: 1.0.6
+version: 2.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, office365, slack, work_from_home, phishing, chat]
+  keywords: [phishing, email, office365, slack, work_from_home, phishing, chat, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Delete_O365_Emails_With_Slack
