--- a/workflows/Microsoft_Office_365_Email_Indicators_to_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Microsoft_Office_365_Email_Indicators_to_Microsoft_Teams/workflow.spec.yaml
@@ -3,21 +3,25 @@ products: ["insightconnect"]
 name: Microsoft_Office_365_Email_Indicators_to_Microsoft_Teams
 title: "Post Office 365 Phishing Alerts to Microsoft Teams"
 description: "This workflow will dissect an email and return all potential malicious indicators to Microsoft Teams in a message."
-version: 1.0.7
+version: 1.1.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, microsoft, work_from_home, teams, office365, phishing]
+  keywords: [phishing, email, microsoft, office365, phishing, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Microsoft_Office_365_Email_Indicators_to_Microsoft_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: workflow1.png
+  - name: workflow_view_1.png
     title: Workflow View Top
-  - name: workflow2.png
+  - name: workflow_view_2.png
     title: Workflow View Bottom
+  - name: workflow_view_eml_loop.png
+    title: Workflow EML Loop View
+  - name: workflow_view_file_loop.png
+    title: Workflow File Loop View
   - name: teams_flow1.png
     title: Example Message to Microsoft Teams
