--- a/workflows/Look_Up_Domains_with_Recorded_Future/workflow.spec.yaml
+++ b/workflows/Look_Up_Domains_with_Recorded_Future/workflow.spec.yaml
@@ -3,14 +3,17 @@ products: [insightconnect, insightidr]
 name: Look_Up_Domains_with_Recorded_Future
 title: "Look Up Domains with Recorded Future"
 description: "This workflow enriches an IDR alert by performing a lookup on all domains in the investigation with Recorded Future."
-version: 1.1.0
+version: 1.1.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [enrichment, recorded future, domain]
+  keywords: [enrichment, recorded_future, domains]
   features: []
 resources:
+  screenshots:
+  - name: workflow_view.png
+    title: Workflow View
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Look_Up_Domains_with_Recorded_Future
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
