--- a/workflows/Lookup_Vuln_From_Teams/workflow.spec.yaml
+++ b/workflows/Lookup_Vuln_From_Teams/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect", "insightvm"]
 name: Lookup_Vuln_From_Teams
-title: "Lookup Vulnerability from Microsoft Teams"
+title: Lookup Vulnerability from Microsoft Teams
 description: This workflow accepts a Microsoft Teams command, looks up the vulnerability in Rapid7's vulnerability database, and posts the vulnerability details back to the same Teams channel.
-version: 1.1.0
+version: 2.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [remediation_management, vulnerability_management]
-  keywords: [remediation_management, vulnerability_management, chat, chatops, work_from_home]
+  keywords: [vulndb, chat, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Lookup_Vuln_From_Teams
@@ -17,7 +17,13 @@ resources:
   screenshots:
   - name: workflow.png
     title: Workflow View
-  - name: job.png
-    title: Successful Workflow Job
-  - name: execution.png
-    title: Completed Job in Microsoft Teams, Multiple Results
+  - name: workflow2.png
+    title: Workflow Loop View
+  - name: job1.png
+    title: Successful Workflow Job, Single Result
+  - name: job2.png
+    title: Successful Workflow Job, Multiple Results
+  - name: job3.png
+    title: Unsuccessful Workflow Job, Not Found
+  - name: artifact.png
+    title: Final Report Artifact
