--- a/workflows/Blacklist_URLs_with_Zscaler_from_Slack/workflow.spec.yaml
+++ b/workflows/Blacklist_URLs_with_Zscaler_from_Slack/workflow.spec.yaml
@@ -3,13 +3,13 @@ products: ["insightconnect"]
 name: Blacklist_URLs_with_Zscaler_from_Slack
 title: Blacklist URLs with Zscaler from Slack
 description: This workflow uses a Slack command to blacklist URLs in Zscaler.
-version: 1.0.0
+version: 2.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords:  [block, zscaler, slack]
+  keywords:  [block, slack, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Blacklist_URLs_with_Zscaler_from_Slack
